<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record_black_24dp"
        android:title="@string/title_record" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_smartobj"
        android:icon="@drawable/ic_smartobj_black_24dp"
        android:title="@string/title_smartobj" />
    <item
        android:id="@+id/navigation_routine"
        android:icon="@drawable/ic_routine_black_24dp"
        android:title="@string/title_routine" />

</menu>