<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:layout_marginBottom="55dp"
    >

    <TextView
        android:id="@+id/tvHomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/home_name"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWhoseAtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/whose_at_home"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAlarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeName"
        app:layout_constraintVertical_bias="0.050000012" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPeople"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvWhoseAtHome"
        app:layout_constraintBottom_toTopOf="@+id/btnAlarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_alarm"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeName" />

    <TextView
        android:id="@+id/tvAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alarm_text"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tvLastRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlarm"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/tvLastRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/last_record"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlarm"
        app:layout_constraintVertical_bias="0.26999998" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastRecord"
        app:layout_constraintVertical_bias="0.13">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <!-- Primo "box quadrato" -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Nome 1" />

            </FrameLayout>

            <!-- Secondo "box quadrato" -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Nome 2" />

            </FrameLayout>

            <!-- Terzo "box quadrato" -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Nome 1" />

            </FrameLayout>

            <!-- Quarto "box quadrato" -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Nome 1" />

            </FrameLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>