<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="55dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.smartobj.SmartobjFragment">

        <TextView
            android:id="@+id/tvSmartObjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/smartobj"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llSmartObjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSmartObjects">

            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="sm 1" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="128dp"
                android:layout_height="110dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="sm 2" />

            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvSmartObjects2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/other_smartobj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llSmartObjects" />

        <LinearLayout
            android:id="@+id/llSmartObjects2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSmartObjects2">

            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="lampadina" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_box_background"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="tapparelle" />

            </FrameLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAddSmartObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_smart_object_add_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
